merge: refactor/88-update-test into develop (#99)
* refactor: update test

- 스웨거 설명빠진부분 추가

#88

* refactor: update test

- 사용하지 않는 import문 삭제

#88

* refactor: update test

- 테스트 코드 수정(단위 테스트로 수정, 컨트롤러 테스트는 webmvctest로 수정)

#88

* refactor: update test

- toList를 collector없이 사용하도록 수정

#88